# FasterTransformer4CodeFuse

./: CMakeLists.txt  LICENSE  README.md  README_CN.md  input_demo.jsonl
examples/pytorch/codefuse/: codefuse_example.py  quant_and_save.py
src/fastertransformer/kernels/: CMakeLists.txt  select_optional_last_tokens.cu  select_optional_last_tokens.h
src/fastertransformer/layers/: CMakeLists.txt  DynamicDecodeLayer.cc
src/fastertransformer/models/gptneox/: CMakeLists.txt  GptNeoX.cc  GptNeoX.h  GptNeoXContextDecoder.cc  GptNeoXContextDecoder.h  GptNeoXDecoder.cc  GptNeoXDecoder.h  GptNeoXDecoderLayerWeight.cc  GptNeoXDecoderLayerWeight.h  GptNeoXWeight.cc  GptNeoXWeight.h
src/fastertransformer/th_op/common/: CMakeLists.txt  WeightOnlyQuantOps.cc
src/fastertransformer/th_op/gptneox/: CMakeLists.txt  GptNeoXOp.cc  GptNeoXOp.h
src/fastertransformer/th_op/gptneox/utils/: CMakeLists.txt  nccl_inherit_utils.cc  nccl_inherit_utils.h  pybind_callback_utils.cc  pybind_callback_utils.h
